fixed the content container's spacing on the left side of the screen (made it closer) and a small adjustment to the footer, both of these was for smaller screens

--- a/features/footer/footer.module.scss
+++ b/features/footer/footer.module.scss
@@ -215,8 +215,8 @@
 
   // Small footer (apply below 1024px)
   @media (width <= 1023px) {
-    margin-left: -22px;
-    padding-left: 22px;
+    margin-left: -28px;
+    padding-left: 28px;
 
     .container {
       width: 375px;
